--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oidc-client",
+  "name": "oidc-client-fix",
   "version": "1.3.0",
   "description": "OpenID Connect (OIDC) & OAuth2 client library",
   "main": "lib/oidc-client.min.js",
